# oneCC

./: .gitignore  CMakeLists.txt  Exceptions.h  appdefines.mk  main.cpp  makefile  makefile.common  readme.md  test.cpp  test.txt
.github/workflows/: ccpp.yml
AST/: ASTNode.h  AbstractAST.h
AST/Nodes/: BinaryOperation.h  BlockStatement.h  Expression.h  Function.h  FunctionArgument.h  FunctionCall.h  Identifier.h  IfStatement.h  IntConst.h  Program.h  ReturnStatement.h  TernaryOperaion.h  TernaryOperation.h  Type.h  WhileStatement.h
ArgsParser/: ArgsParser.cpp  ArgsParser.h  makefile
Config/: Config.cpp  Config.h  config.cpp  config.h  makefile
Lexer/: KeywordManager.cpp  KeywordManager.h  Lexer.cpp  Lexer.h  TextSequencer.cpp  TextSequencer.h  Token.cpp  Token.h  lexer.cpp  lexer.h  makefile
Parser/: Expression.h  Parser.cpp  Parser.h
SemanticAnalyzer/: SemanticAnalyzer.cpp  SemanticAnalyzer.h
SemanticAnalyzer/FunctionCollector/: FunctionCollector.h
SemanticAnalyzer/Scoper/: Scoper.h
Tests/: AbstractTest.h  Tester.h  main.cpp  makefile
Tests/ArgsParser/: ArgsParserTest.cpp
Tests/Config/: ConfigTest.cpp  makefile
Tests/Lexer/: LexerTest.cpp  LexerTest.h  makefile
Tests/Lexer/Data/: assign_expression.txt  example.txt  function_definition.txt  lexer.txt  lexer_ans.txt
Tests/Parser/Data/: test.txt
TextSequencer/: makefile  text_sequencer.cpp  text_sequencer.h
Utils/: Utils.h
Utils/Debug/: ASTReader.cpp  ASTReader.h
demos/: assign_expression.c  error.c  example.c  example.txt
src/: main.cpp
src/AST/: ASTNode.h  AbstractAST.h
src/AST/Nodes/: BinaryOperation.h  BlockStatement.h  BooleanSnake.h  Expression.h  Function.h  FunctionArgument.h  Identifier.h  IfStatement.h  ReturnStatement.h  WhileStatement.h
src/ArgsParser/: ArgData.h  ArgsParser.cpp  ArgsParser.h  Config.h
src/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
src/CodeGenerator/RegisterManager/: RegisterManager.cpp  RegisterManager.h
src/CodeGenerator/aarch32/: CodeGenerator.cpp  CodeGenerator.h
src/CodeGenerator/aarch32/Common/: Regs.cpp  Regs.h  TypesAarch32.h
src/CodeGenerator/aarch32/Managers/: OutputManager.h  RegisterManager.cpp  RegisterManager.h  Transaction.h  TransactionManager.cpp  TransactionManager.h  VarManager.h
src/CodeGenerator/aarch32/Output/: OutputManager.cpp  OutputManager.h  OutputNode.cpp  OutputNode.h
src/CodeGenerator/aarch32/RegisterManager/: RegisterManager.cpp  RegisterManager.h
src/CodeGenerator/aarch32/Translators/: AbstractAarch32Translator.h  AsmTranslator.cpp  AsmTranslator.h  ByteCodeTranslator.cpp  ByteCodeTranslator.h  TranslatedOpcode.h
src/CodeGenerator/x86_32/: CodeGenerator.cpp  CodeGenerator.h
src/CodeGenerator/x86_32/Common/: ModRM.h  Regs.h  TypesX86_32.h
src/CodeGenerator/x86_32/Translators/: AbstractX86_32Translator.h  AsmTranslator.cpp  AsmTranslator.h  ByteCodeTranslator.cpp  ByteCodeTranslator.h
src/Config/: Config.h
src/Helpers/: Defines.h
src/Lexer/: KeywordManager.cpp  Lexer.cpp  Lexer.h  TextSequencer.cpp  TextSequencer.h  Token.h
src/Parser/: Defines.h  ParseDeclaration.cpp  ParseExpression.cpp  ParseStatement.cpp  Parser.cpp  Parser.h
src/SemanticAnalyzer/: SemanticAnalyzer.cpp  SemanticAnalyzer.h
src/SemanticAnalyzer/Scoper/: Scoper.cpp  Scoper.h
src/Tests/: AbstractTest.h  Tester.h
src/Tests/ArgsParser/: ArgsParserTest.cpp  ArgsParserTest.h
src/Tests/Config/: ConfigTest.h
src/Tests/Lexer/: LexerTest.h
src/Tests/Lexer/Data/: assign_expression.txt  lexer.txt  lexer_ans.txt
src/Utils/: Utils.h
src/Utils/ASTReader/: ASTReader.cpp  ASTReader.h
tests/: Tester.h  lexer_ans.txt  main.cpp  makefile
tests/Lexer/: LexerTester.cpp  LexerTester.h  makefile
utils/IfStressTest/: test.py
utils/x86/OpcodesFetcher/: fetcher.py  x86fetcher.py
